examples/test/testpolicy8387.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy8387
  namespace: namespace348
spec:
  podSelector:
    matchLabels:
      key10: value27
  policyTypes:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          key30: value2
          key10: value26
      podSelector:
        matchLabels:
          key39: value16
          key49: value16
          key32: value10
